--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "Note-Taking-webApp",
   "version": "1.0.0",
-  "description": "",
+  "description": "# AS A small business owner I WANT to be able to write and save notes SO THAT I can organize my thoughts and keep track of tasks I need to complete",
   "main": "server.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -20,6 +23,5 @@
   "homepage": "https://github.com/tomhabt/Note-Taking-webApp#readme",
   "dependencies": {
     "express": "^4.17.1"
-  },
-  "devDependencies": {}
+  }
 }
